# homework-1

./: CMakeLists.txt  README.md  requirements.txt
images/: Google_JAX_low_contrast.pgm  bear_s_and_p.pgm  bear_s_and_p_raw.pgm  boat_s_and_p.pgm  glass_s_and_p.pgm  lungs_s_and_p_10.pgm  lungs_s_and_p_30.pgm  lungs_s_and_p_50.pgm  woman_low_contrast.pgm
scripts/: q2.cpp  q2.py  q3.cpp  q3.py  q4.cpp  q4.py  q5.cpp  q5.py
